chore: update openwebui stack

--- a/openwebui/.env
+++ b/openwebui/.env
@@ -7,3 +7,5 @@ OPENROUTER_API_KEY='your-openrouter-api-key-here'
 MOONSHOT_API_KEY='your-moonshot-api-key-here'
 HYPERBOLIC_KEY='your-hyperbolic-key-here'
 XAI_KEY='your-xai-key-here'
+ZAI_API_KEY='your-zai-key-here'
+V0_API_KEY='your-v0-key-here'
