--- a/openwebui/config.yml
+++ b/openwebui/config.yml
@@ -14,22 +14,22 @@ model_list:
       model: xai/grok-3-mini
       api_key: os.environ/XAI_KEY
 
-  - model_name: Claude 3.5 Sonnet
+  - model_name: Claude Sonnet 3.5
     litellm_params:
       model: claude-3-5-sonnet-20241022
       api_key: os.environ/ANTHROPIC_API_KEY
 
-  - model_name: Claude 3.7 Sonnet
+  - model_name: Claude Sonnet 3.7
     litellm_params:
       model: claude-3-7-sonnet-latest
       api_key: os.environ/ANTHROPIC_API_KEY
 
-  - model_name: Claude 4 Sonnet
+  - model_name: Claude Sonnet 4
     litellm_params:
       model: claude-4-sonnet-20250514
       api_key: os.environ/ANTHROPIC_API_KEY
 
-  - model_name: Claude 4 Opus
+  - model_name: Claude Opus 4
     litellm_params:
       model: claude-4-opus-20250514
       api_key: os.environ/ANTHROPIC_API_KEY
@@ -38,6 +38,21 @@ model_list:
     litellm_params:
       model: claude-opus-4-1-20250805
       api_key: os.environ/ANTHROPIC_API_KEY
+
+  - model_name: GPT-5
+    litellm_params:
+      model: gpt-5
+      api_key: os.environ/OPENAI_API_KEY
+    
+  - model_name: GPT-5 mini
+    litellm_params:
+      model: gpt-5-mini
+      api_key: os.environ/OPENAI_API_KEY
+
+  - model_name: GPT-5 nano
+    litellm_params:
+      model: gpt-5-nano
+      api_key: os.environ/OPENAI_API_KEY
 
   - model_name: gpt-4o
     litellm_params:
@@ -54,6 +69,11 @@ model_list:
       model: o4-mini
       api_key: os.environ/OPENAI_API_KEY
 
+  - model_name: o3
+    litellm_params:
+      model: o3
+      api_key: os.environ/OPENAI_API_KEY
+
   - model_name: o3-mini
     litellm_params:
       model: o3-mini
@@ -61,12 +81,7 @@ model_list:
 
   - model_name: gpt-image-1
     litellm_params:
-      model: gpt-image-1
-      api_key: os.environ/OPENAI_API_KEY
-
-  - model_name: o3
-    litellm_params:
-      model: o3
+      model: openai/gpt-image-1
       api_key: os.environ/OPENAI_API_KEY
 
   - model_name: GPT OSS 120B
@@ -86,6 +101,24 @@ model_list:
       model: openrouter/openrouter/horizon-beta
       api_key: os.environ/OPENROUTER_API_KEY
       drop_params: true
+
+  - model_name: v0-1.5-md
+    litellm_params:
+      model: openai/v0-1.5-md
+      api_key: os.environ/V0_API_KEY
+      api_base: https://api.v0.dev/v1
+    model_info:
+      input_cost_per_token: 0.000003
+      output_cost_per_token: 0.000015
+
+  - model_name: v0-1.5-lg
+    litellm_params:
+      model: openai/v0-1.5-lg
+      api_key: os.environ/V0_API_KEY
+      api_base: https://api.v0.dev/v1
+    model_info:
+      input_cost_per_token: 0.000015
+      output_cost_per_token: 0.000075
 
   - model_name: (OpenRouter) Llama 3.1 405B Instruct
     litellm_params:
