--- a/openwebui/docker-compose.yml
+++ b/openwebui/docker-compose.yml
@@ -5,17 +5,26 @@ services:
     env_file:
       - .env
     ports:
-      - "4000:4000"
+      - 4000:4000
     volumes:
       - ./config.yml:/app/config.yaml
-    command: --config /app/config.yaml --port 4000
+    command: --config /app/config.yaml
     restart: always
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.litellm.rule=Host(`litellm.infra.tushgaurav.com`)
+      - traefik.http.routers.litellm.entrypoints=websecure
+      - traefik.http.routers.litellm.tls=true
+      - traefik.http.routers.litellm.tls.certresolver=websecure
+    networks:
+      - frontend
     environment:
       DATABASE_URL: "postgresql://llmproxy:dbpassword9090@db:5432/litellm"
       STORE_MODEL_IN_DB: "True"
 
   db:
-    image: postgres
+    image: postgres:17
+    container_name: chat_db
     restart: always
     environment:
       POSTGRES_DB: litellm
@@ -23,6 +32,8 @@ services:
       POSTGRES_PASSWORD: dbpassword9090
     volumes:
       - owu_db:/var/lib/postgresql/data
+    networks:
+      - frontend
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -d litellm -U llmproxy"]
       interval: 1s
@@ -36,6 +47,14 @@ services:
       - open-webui:/app/backend/data
     ports:
       - 3069:8080
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.webui.rule=Host(`chat.infra.tushgaurav.com`)
+      - traefik.http.routers.webui.entrypoints=websecure
+      - traefik.http.routers.webui.tls=true
+      - traefik.http.routers.webui.tls.certresolver=websecure
+    networks:
+      - frontend
     environment:
       - "OLLAMA_BASE_URL=http://ollama:11434"
       - "WEBUI_SECRET_KEY="
@@ -46,3 +65,7 @@ services:
 volumes:
   owu_db:
   open-webui: {}
+
+networks:
+  frontend:
+    external: true
